# hmin317-tp3

./: .gitignore  2017_02_TP_TIMER.docx  2017_03_TP_SAISONS.docx  CMakeLists.txt  Compte Rendu Cossin Tristan.odt  Compte rendu.odt  CompteRendu.odt  Compte_Rendu_TP3.odt  Compte_rendu_tp3.odt  Makefile  ModelParticle.cpp  ModelParticle.hpp  Particle.cpp  Particle.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  README.md  TP.pro  TP_03_Saisons.docx  aabb.cpp  aabb.h  aliases_int.h  calendar.cpp  calendar.h  calendrier.cpp  calendrier.h  camera.cpp  camera.h  cameraactions.cpp  cameraactions.h  cameracontroller.cpp  cameracontroller.h  cameracontrollercontrols.cpp  cameracontrollercontrols.h  cameracontrols.cpp  camerafirst.cpp  camerafirst.h  camerafreefly.cpp  camerafreefly.h  camerathird.cpp  (+116 more)
Rapport/: code.txt  css.tex  rapport.tex
core/: aliases_int.h  aliases_memory.h  assetmanager.cpp  assetmanager.h  bigfile.cpp  bigfile.h  gameloop.cpp  gameloop.h  log.h  param.cpp  param.h  scene.cpp  scene.h  systemengine.cpp  systemengine.h
editor/: assetmanagerview.cpp  assetmanagerview.h  cameracontrollercontrols.cpp  cameracontrollercontrols.h  cameracontrols.cpp  cameracontrols.h  componenteditors.cpp  componenteditors.h  componentuihandlers.cpp  componentuihandlers.h  componentview.cpp  componentview.h  dragtoolbutton.cpp  dragtoolbutton.h  editor_resources.qrc  entitylistmodel.cpp  entitylistmodel.h  entityxhook.cpp  entityxhook.h  fpswidgets.cpp  gamewidget.cpp  hooksystems.cpp  hooksystems.h  icomponentuihandler.h  main.cpp  mainwindow.cpp  mainwindow.h  panemanager.cpp  panemanager.h  particleeditor.cpp  particleeditor.h  projectmanager.cpp  projectmanager.h  renderwidget.cpp  renderwidget.h  sceneview.cpp  sceneview.h
editor/gui/: advancedslider.cpp  advancedslider.h  fpswidgets.cpp  fpswidgets.h  gamewidget.cpp  gamewidget.h  layoututils.cpp  layoututils.h  pane.cpp  pane.h  urledit.cpp  urledit.h  vec3edit.cpp  vec3edit.h  vecdimindicator.cpp  vecdimindicator.h
editor/gui/coloreditor/: coloreditor.cpp  coloreditor.h  hueslider.cpp  hueslider.h  saturationslider.cpp  saturationslider.h  valueslider.cpp  valueslider.h
extras/: assetmanager.cpp  assetmanager.h  bigfile.cpp  cameraactions.cpp  cameraactions.h  cameracontroller.cpp  cameracontroller.h  extras_shaders.qrc  gamewidget.cpp  gamewidget.h  grid.cpp  grid.h  heightmap.cpp  heightmap.h  particleeffect.cpp  particleeffect.h  particlematerial.cpp  particlematerial.h  serialization.cpp  serialization.h  shaderutils.h
extras/particles/: extras_particles_shaders.qrc  particleeffect.cpp  particleeffect.h  particlematerial.cpp  particlematerial.h  particlesystem.cpp  particlesystem.h  quick.cpp  quick.h
extras/particles/shaders/: particle.geom
extras/shaders/: particle.frag  particle.vert  terrain_heightmap.vert  terrain_wireframe.frag
input/: actionsystem.cpp  actionsystem.h  eventhook.cpp  eventhook.h  inputsystem.cpp  inputsystem.h  keyboard.h
lab/marble/: main.cpp
lab/marble/data/meshes/: cube.ply  sphere.ply
lab/marble/data/scripts/: player.lua
lab/marble/data/shaders/: terrain_wireframe.frag
lab/seasons/: main.cpp  mainwindow.cpp  mainwindow.h  seasoncontroller.cpp  seasoncontroller.h  seasons_shaders.qrc  shaders.qrc
lab/seasons/data/scripts/: free_camera.lua
lab/seasons/data/shaders/: terrain_heightmap.frag  terrain_heightmap.vert
physics/: bullet_engine_bridge.cpp  bullet_engine_bridge.h  collider.cpp  collider.h  collisionsystem.cpp  collisionsystem.h  rigidbody.cpp  rigidbody.h
render/: aabb.cpp  aabb.h  camera.cpp  camera.h  geometry.h  light.cpp  light.h  material.cpp  mesh.cpp  mesh.h  renderassets.cpp  renderassets.h  renderpass.cpp  renderpass.h  rendersystem.cpp  rendersystem.h  renderwidget.cpp  scene.cpp  scene.h  shaderparam.cpp  shaderparam.h  shaderutils.h  transform.cpp  transform.h
render/geometry/: geometry.cpp  geometry.h  vertexattrib.cpp  vertexattrib.h  vertexlayout.cpp
render/material/: builtins.cpp  builtins.h  material.cpp  material.h  renderpass.cpp  renderpass.h  shaderparam.cpp  shaderparam.h  shaderprogram.cpp  shaderprogram.h  shaderutils.cpp  shaderutils.h  texture.h  textureutils.cpp  textureutils.h
render/renderer/: buffermanager.cpp  buffermanager.h  drawcommand.h  glbuffer.h  glshaderprogram.h  gltexture.h  glvao.h  glwrapper.cpp  glwrapper.h  openglversion.h  renderer.cpp  renderer.h  shadermanager.cpp  shadermanager.h  texturemanager.cpp  texturemanager.h  vaomanager.cpp  vaomanager.h
render/renderer/managers/: buffermanager.cpp  buffermanager.h  shadermanager.cpp  shadermanager.h  texturemanager.cpp  texturemanager.h  vaomanager.cpp  vaomanager.h
render/shaders/: default.frag  default.vert  phong.frag  phong_directional.frag  phong_directional.vert
renderer/: aliases_memory.h  buffer.cpp  buffer.h  buffermanager.cpp  buffermanager.h  geometrydesc.cpp  geometrydesc.h  glbuffer.h  glwrapper.cpp  glwrapper.h  material.cpp  material.h  renderer.cpp  renderer.h  renderpass.h  shadermanager.cpp  shadermanager.h  shaderparam.cpp  shaderparam.h  vertexattrib.h  vertexlayout.cpp  vertexlayout.h
report/: report.md
res/shaders/: geom_textured.vert  particle.frag  particle.geom  particle.vert  terrain_heightmap.frag  terrain_heightmap.vert
script/: actionsystem.cpp  api.cpp  api.h  frameaction.h  lua_includes.h  luaqvariant_bridge.cpp  luaqvariant_bridge.h  luaserver.cpp  luaserver.h  script.cpp  script.h  scriptassets.cpp  scriptassets.h  scriptsystem.cpp  scriptsystem.h
script/scripts/: free_camera.lua
shaders/: fshader.glsl  vshader.glsl
src/: global.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  syncronizer.cpp  syncronizer.h
src/controller/: camera_facing.cpp  camera_facing.h  camera_rts.cpp  camera_rts.h
src/gameobject/: camera.cpp  camera.h  component.cpp  component.h  gameobject.cpp  gameobject.h  geometry.cpp  geometry.h  material.cpp  material.h  particle_system.cpp  particle_system.h  rigidbody.cpp  rigidbody.h  transform.cpp  transform.h
src/geometry/: mesh.cpp  mesh.h  shapes.cpp  shapes.h
(+3 files in other folders)
